--- a/format/format.csproj
+++ b/format/format.csproj
@@ -85,6 +85,7 @@
     <Compile Include="VGMToolbox\format\CriCpkArchive.cs" />
     <Compile Include="VGMToolbox\format\CriUtfTable.cs" />
     <Compile Include="VGMToolbox\format\ElectronicArtsMpcStream.cs" />
+    <Compile Include="VGMToolbox\format\FujitsuEup.cs" />
     <Compile Include="VGMToolbox\format\HudsonHvqm4VideoStream.cs" />
     <Compile Include="VGMToolbox\format\INoIntroHeaderFormat.cs" />
     <Compile Include="VGMToolbox\format\iso\SonyPsVitaCartridge.cs" />
